Fix layout bug and unregister service worker.

--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -11,7 +11,6 @@
         padding: 1rem 2rem 2rem 2rem;
         box-sizing: border-box;
         width: 100%;
-        flex-grow: 1;
         position: relative;
     }
 
