--- a/src/pages/Login/index.scss
+++ b/src/pages/Login/index.scss
@@ -3,6 +3,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        flex-grow: 1;
     }
 
     #login-form {
